# Atom-HTML-CPP

./: LICENSE  README.md
Atom/: Atom.h  AtomCAPI.cpp  AtomCAPI.h  AtomCMake.cmake  AtomClassManager.cpp  AtomClassManager.h  AtomCssPropertiesMacros.h  AtomElement.cpp  AtomElement.h  AtomElementOptions.cpp  AtomElementOptions.h  AtomJSDefinitions.cpp  AtomJSDefinitions.h  AtomMacros.h  AtomStyleMacros.h  AtomStyleManager.cpp  AtomStyleManager.h  AtomSystemDefinitions.h  AtomUtils.cpp  AtomUtils.h  AtomVal.h  AtomWASMDefinitions.cpp
Atom-Worker-Script/: AtomWorker.js
Atom/Atom3D/: Atom3D.h  AtomMatrix.cpp  AtomMatrix.h  AtomQuat.h  AtomVector.cpp  AtomVector.h
Atom/AtomDOM/: AtomDOM.cpp  AtomDOM.h
CssToCpp/: CssToCpp.html
RecommendedSetup/: CMakeLists.txt  CMakeSettings.json  main.cpp
